unordered lists for weather data

--- a/index.html
+++ b/index.html
@@ -28,35 +28,50 @@
 <section class="container">
     <h2 class="city-title" id="current-city"></h2>
     <div id="weather-data">
-        <p>Temp:</p>
-        <p>Wind:</p>
-        <p>Humidity:</p>
-        <p>UV Index:</p>
+        <ul>
+            <li>Temp:</li>
+            <li>Wind:</li>
+            <li>Humidity:</li>
+            <li>UV Index:</li>
+        </ul>
     </div>
 </section>
 
 <!--5 Day Forecast-->
 <section>
     <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
-    <!--add Taskmaster bootstrap code-->
-    <div class="">
+    <div class="m-5 row justify-content-around">
         <div class="col">
             <h4 id="day-1"></h4>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
+            <ul>
+                <li>Temp:</li>
+                <li>Wind:</li>
+                <li>Humidity:</li>
+            </ul>
             <h4 id="day-2"></h4>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
+            <ul>
+                <li>Temp:</li>
+                <li>Wind:</li>
+                <li>Humidity:</li>
+            </ul>
             <h4 id="day-3"></h4>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
+            <ul>
+                <li>Temp:</li>
+                <li>Wind:</li>
+                <li>Humidity:</li>
+            </ul>
             <h4 id="day-4"></h4>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
+            <ul>
+                <li>Temp:</li>
+                <li>Wind:</li>
+                <li>Humidity:</li>
+            </ul>
+            <h4 id="day-5"></h4>
+            <ul>
+                <li>Temp:</li>
+                <li>Wind:</li>
+                <li>Humidity:</li>
+            </ul>
         </div>
     </div>
 </section>
