establish API, update id tags in HTML, search button

--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
     <h2 class="city-title" id="city-search">Search for a City:</h2>
     <form>
         <input type="text" id="city-input" name="city-input">
+        <input type="submit" id="search-Btn" value = "Search">
     </form>
 </section>
 
 <!--Chosen City Display-->
 <section class="container">
     <h2 class="city-title" id="current-city"></h2>
-    <div id="weather-data">
-        <ul>
-            <li>Temp:</li>
-            <li>Wind:</li>
-            <li>Humidity:</li>
-            <li>UV Index:</li>
+    <div id="city-weather">
+        <ul class="weather-data">
+            <li id="temp-input"></li>
+            <li id="wind-input"></li>
+            <li id="humidity-input"></li>
+            <li id="UV-input"></li>
         </ul>
     </div>
 </section>
@@ -43,34 +44,34 @@
     <div class="m-5 row justify-content-around">
         <div class="col">
             <h4 id="day-1"></h4>
-            <ul>
-                <li>Temp:</li>
-                <li>Wind:</li>
-                <li>Humidity:</li>
+            <ul class="weather-data">
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
             </ul>
             <h4 id="day-2"></h4>
-            <ul>
-                <li>Temp:</li>
-                <li>Wind:</li>
-                <li>Humidity:</li>
+            <ul class="weather-data">
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
             </ul>
             <h4 id="day-3"></h4>
-            <ul>
-                <li>Temp:</li>
-                <li>Wind:</li>
-                <li>Humidity:</li>
+            <ul class="weather-data">
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
             </ul>
             <h4 id="day-4"></h4>
-            <ul>
-                <li>Temp:</li>
-                <li>Wind:</li>
-                <li>Humidity:</li>
+            <ul class="weather-data">
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
             </ul>
             <h4 id="day-5"></h4>
-            <ul>
-                <li>Temp:</li>
-                <li>Wind:</li>
-                <li>Humidity:</li>
+            <ul class="weather-data">
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
             </ul>
         </div>
     </div>
