--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </section>
 
 <!--5 Day Forecast-->
-<section>
+<section class = container>
     <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
     <div class="m-5 row justify-content-around">
         <div class="col">
