--- a/index.html
+++ b/index.html
@@ -27,70 +27,72 @@
             </form>
         </header>
     </div>
-</div>
 
 <!--Chosen City Display-->
-<section class="container">
-    <h2 class="city-title" id="current-city"></h2>
-    <div id="city-weather">
-        <ul class="weather-data">
-            <li id="temp-input"></li>
-            <li id="wind-input"></li>
-            <li id="humidity-input"></li>
-            <li id="UV-input"></li>
-        </ul>
-    </div>
-</section>
-
-<!--5 Day Forecast-->
-<div>
     <section class="container">
-    <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
-    <div class="container">
-        <div>
-            <div class="col-sm">
-            <h4 id="day-1"></h4>
+        <h2 class="city-title" id="current-city"></h2>
+        <div id="city-weather">
             <ul class="weather-data">
-                <li id="temp-input">1</li>
-                <li id="wind-input">2</li>
-                <li id="humidity-input">3</li>
+                <li id="temp-input"></li>
+                <li id="wind-input"></li>
+                <li id="humidity-input"></li>
+                <li id="UV-input"></li>
             </ul>
-            </div>
-            <div class="col-sm">
-            <h4 id="day-2"></h4>
-            <ul class="weather-data">
-                <li id="temp-input">1</li>
-                <li id="wind-input">2</li>
-                <li id="humidity-input">3</li>
-            </ul>
-            </div>
-            <div class="col-sm">
-            <h4 id="day-3"></h4>
-            <ul class="weather-data">
-                <li id="temp-input">1</li>
-                <li id="wind-input">2</li>
-                <li id="humidity-input">3</li>
-            </ul>
-            </div>
-            <div class="col-sm">
-            <h4 id="day-4"></h4>
-            <ul class="weather-data">
-                <li id="temp-input">1</li>
-                <li id="wind-input">2</li>
-                <li id="humidity-input">3</li>
-            </ul>
-            </div>
-            <div class="col-sm">
-            <h4 id="day-5"></h4>
-            <ul class="weather-data">
-                <li id="temp-input">1</li>
-                <li id="wind-input">2</li>
-                <li id="humidity-input">3</li>
-            </ul>
-            </div>
         </div>
-    </div>
-</section>
+    </section>
+
+<!--5 Day Forecast Section-->
+    <section class="container">
+        <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
+        <!--Forecast Cards-->
+            <div class="row">
+                <div class="col">
+                    <h4 id="day-1">Day 1</h4>
+                    <ul class="weather-data">
+                        <li id="temp-input">1</li>
+                        <li id="wind-input">2</li>
+                        <li id="humidity-input">3</li>
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4 id="day-2">Day 2</h4>
+                    <ul class="weather-data">
+                        <li id="temp-input">1</li>
+                        <li id="wind-input">2</li>
+                        <li id="humidity-input">3</li>
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4 id="day-3">Day 3</h4>
+                    <ul class="weather-data">
+                        <li id="temp-input">1</li>
+                        <li id="wind-input">2</li>
+                        <li id="humidity-input">3</li>
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4 id="day-4">Day 4</h4>
+                    <ul class="weather-data">
+                        <li id="temp-input">1</li>
+                        <li id="wind-input">2</li>
+                        <li id="humidity-input">3</li>
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4 id="day-5">Day 5</h4>
+                    <ul class="weather-data">
+                        <li id="temp-input">1</li>
+                        <li id="wind-input">2</li>
+                        <li id="humidity-input">3</li>
+                    </ul>
+                </div>
+        
+    </section>
+<!--End Container Div-->
 </div>
 
 <script src="./assets/js/script.js"></script>
