set up 5-day forecast API calls

--- a/index.html
+++ b/index.html
@@ -66,45 +66,45 @@
                 <div class="col">
                     <h4 id="day-1">Day 1</h4>
                     <ul>
-                        <li id="day-1-temp">1</li>
-                        <li id="day-1-wind">2</li>
-                        <li id="day-1-humidity">3</li>
+                        <li id="day-1-temp"></li>
+                        <li id="day-1-wind"></li>
+                        <li id="day-1-humidity"></li>
                     </ul>
                 </div>
                 <!--Column 2-->
                 <div class="col">
                     <h4 id="day-2">Day 2</h4>
                     <ul>
-                        <li id="day-2-temp">1</li>
-                        <li id="day-2-wind">2</li>
-                        <li id="day-2-humidity">3</li>
+                        <li id="day-2-temp"></li>
+                        <li id="day-2-wind"></li>
+                        <li id="day-2-humidity"></li>
                     </ul>
                 </div>
 
                 <div class="col">
                     <h4 id="day-3">Day 3</h4>
                     <ul>
-                        <li id="day-3-temp">1</li>
-                        <li id="day-3-wind">2</li>
-                        <li id="day-3-humidity">3</li>
+                        <li id="day-3-temp"></li>
+                        <li id="day-3-wind"></li>
+                        <li id="day-3-humidity"></li>
                     </ul>
                 </div>
 
                 <div class="col">
                     <h4 id="day-4">Day 4</h4>
                     <ul>
-                        <li id="day-4-temp">1</li>
-                        <li id="day-4-wind">2</li>
-                        <li id="day-4-humidity">3</li>
+                        <li id="day-4-temp"></li>
+                        <li id="day-4-wind"></li>
+                        <li id="day-4-humidity"></li>
                     </ul>
                 </div>
 
                 <div class="col">
                     <h4 id="day-5">Day 5</h4>
                     <ul>
-                        <li id="day-5-temp">1</li>
-                        <li id="day-5-wind">2</li>
-                        <li id="day-5-humidity">3</li>
+                        <li id="day-5-temp"></li>
+                        <li id="day-5-wind"></li>
+                        <li id="day-5-humidity"></li>
                     </ul>
                 </div>
             </div>
@@ -112,7 +112,7 @@
     </div>
     </div>
     <!--End Container Div-->
-    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
