--- a/index.html
+++ b/index.html
@@ -20,89 +20,87 @@
     </div>
 
     <div class="row">
-            <div class="col-4">
-                <!--Search for a City-->
-                <h2>Search for a City:</h2>
-                <form>
-                    <input type="text" id="city-input" name="city-input" placeholder="City Name">
-                    <button class="btn" id="search-btn" type="submit">Search</button>
-                    <hr>
-                </form>
-                <ul id="form"></ul>
+        <div class="col-4">
+            <!--Search for a City-->
+            <h2>Search for a City:</h2>
+            <form>
+                <input type="text" id="city-input" name="city-input" placeholder="City Name">
+                <button class="btn" id="search-btn" type="submit">Search</button>
+                <hr>
+            </form>
+            <ul id="form"></ul>
 
-            </div>
-            <!--Chosen City Display-->
-            <div class="col-8">
-                <div class="row">
-                    <section>
-                        <h2 class="city-title" id="current-city">Current City</h2>
-                        <div id="city-weather">
-                            <h4 id="day-0"></h4>
-                            <ul class="weather-data">
-                                <li id="temp-input"></li>
-                                <li id="wind-input"></li>
-                                <li id="humidity-input"></li>
-                                <li id="UV-input"></li>
-                            </ul>
-                        </div>
-                    </section>
-                </div>
-
-                <!--5 Day Forecast Section-->
-                <div class="row">
-                    <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
-                    <!--Forecast Cards-->
-                    <div class="row">
-                        <!--Column 1-->
-                        <div class="col">
-                            <h4 id="day-1">Day 1</h4>
-                            <ul>
-                                <li id="day-1-temp"></li>
-                                <li id="day-1-wind"></li>
-                                <li id="day-1-humidity"></li>
-                            </ul>
-                        </div>
-                        <!--Column 2-->
-                        <div class="col">
-                            <h4 id="day-2">Day 2</h4>
-                            <ul>
-                                <li id="day-2-temp"></li>
-                                <li id="day-2-wind"></li>
-                                <li id="day-2-humidity"></li>
-                            </ul>
-                        </div>
-
-                        <div class="col">
-                            <h4 id="day-3">Day 3</h4>
-                            <ul>
-                                <li id="day-3-temp"></li>
-                                <li id="day-3-wind"></li>
-                                <li id="day-3-humidity"></li>
-                            </ul>
-                        </div>
-
-                        <div class="col">
-                            <h4 id="day-4">Day 4</h4>
-                            <ul>
-                                <li id="day-4-temp"></li>
-                                <li id="day-4-wind"></li>
-                                <li id="day-4-humidity"></li>
-                            </ul>
-                        </div>
-
-                        <div class="col">
-                            <h4 id="day-5">Day 5</h4>
-                            <ul>
-                                <li id="day-5-temp"></li>
-                                <li id="day-5-wind"></li>
-                                <li id="day-5-humidity"></li>
-                            </ul>
-                        </div>
+        </div>
+        <!--Chosen City Display-->
+        <div class="col-8">
+            <div class="row">
+                <section>
+                    <h2 class="city-title" id="current-city">Current City</h2>
+                    <div id="city-weather">
+                        <h4 id="day-0"></h4>
+                        <ul class="weather-data">
+                            <li id="temp-input"></li>
+                            <li id="wind-input"></li>
+                            <li id="humidity-input"></li>
+                            <li id="UV-input"></li>
+                        </ul>
                     </div>
-                    </section>
+                </section>
+            </div>
+
+            <!--5 Day Forecast Section-->
+            <div class="row">
+                <h3 class="forecast-title" id="forecast-title">5-Day Forecast</h3>
+            </div>
+            <!--Forecast Cards-->
+            <div class="row">
+                <!-- Forecast Day 1 -->
+                <div class="col">
+                    <h4 id="day-1">Day 1</h4>
+                    <ul>
+                        <li id="day-1-temp"></li>
+                        <li id="day-1-wind"></li>
+                        <li id="day-1-humidity"></li>
+                    </ul>
+                </div>
+                <!-- Forecast Day 2 -->
+                <div class="col">
+                    <h4 id="day-2">Day 2</h4>
+                    <ul>
+                        <li id="day-2-temp"></li>
+                        <li id="day-2-wind"></li>
+                        <li id="day-2-humidity"></li>
+                    </ul>
+                </div>
+                <!-- Forecast Day 3 -->
+                <div class="col">
+                    <h4 id="day-3">Day 3</h4>
+                    <ul>
+                        <li id="day-3-temp"></li>
+                        <li id="day-3-wind"></li>
+                        <li id="day-3-humidity"></li>
+                    </ul>
+                </div>
+                <!-- Forecast Day 4 -->
+                <div class="col">
+                    <h4 id="day-4">Day 4</h4>
+                    <ul>
+                        <li id="day-4-temp"></li>
+                        <li id="day-4-wind"></li>
+                        <li id="day-4-humidity"></li>
+                    </ul>
+                </div>
+                <!-- Forecast Day 5 -->
+                <div class="col">
+                    <h4 id="day-5">Day 5</h4>
+                    <ul>
+                        <li id="day-5-temp"></li>
+                        <li id="day-5-wind"></li>
+                        <li id="day-5-humidity"></li>
+                    </ul>
                 </div>
             </div>
-            <!--End Container Div-->
+            </section>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
         <script src="./assets/js/script.js"></script>
