--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="btn" id="search-btn" type="submit">Search</button>
                 <hr>
             </form>
-            <ul id="form"></ul>
+            <ul id="ul"></ul>
 
         </div>
         <!--Chosen City Display-->
@@ -39,6 +39,7 @@
                     <div id="city-weather">
                         <h4 id="day-0"></h4>
                         <ul class="weather-data">
+                            <img id="curWeathIcon"src="" alt="">
                             <li id="temp-input"></li>
                             <li id="wind-input"></li>
                             <li id="humidity-input"></li>
@@ -58,6 +59,7 @@
                 <div class="col">
                     <h4 id="day-1">Day 1</h4>
                     <ul>
+                        <img id="da1WeathIcon"src="" alt="">
                         <li id="day-1-temp"></li>
                         <li id="day-1-wind"></li>
                         <li id="day-1-humidity"></li>
@@ -67,6 +69,7 @@
                 <div class="col">
                     <h4 id="day-2">Day 2</h4>
                     <ul>
+                        <img id="da2WeathIcon"src="" alt="">
                         <li id="day-2-temp"></li>
                         <li id="day-2-wind"></li>
                         <li id="day-2-humidity"></li>
@@ -76,6 +79,7 @@
                 <div class="col">
                     <h4 id="day-3">Day 3</h4>
                     <ul>
+                        <img id="da3WeathIcon"src="" alt="">
                         <li id="day-3-temp"></li>
                         <li id="day-3-wind"></li>
                         <li id="day-3-humidity"></li>
@@ -85,6 +89,7 @@
                 <div class="col">
                     <h4 id="day-4">Day 4</h4>
                     <ul>
+                        <img id="day4WeathIcon"src="" alt="">
                         <li id="day-4-temp"></li>
                         <li id="day-4-wind"></li>
                         <li id="day-4-humidity"></li>
@@ -94,6 +99,7 @@
                 <div class="col">
                     <h4 id="day-5">Day 5</h4>
                     <ul>
+                        <img id="day5WeathIcon"src="" alt="">
                         <li id="day-5-temp"></li>
                         <li id="day-5-wind"></li>
                         <li id="day-5-humidity"></li>
