add 5-day forecast icons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col">
                     <h4 id="day-1">Day 1</h4>
                     <ul>
-                        <img id="da1WeathIcon"src="" alt="">
+                        <img id="day1WeathIcon"src="" alt="">
                         <li id="day-1-temp"></li>
                         <li id="day-1-wind"></li>
                         <li id="day-1-humidity"></li>
@@ -69,7 +69,7 @@
                 <div class="col">
                     <h4 id="day-2">Day 2</h4>
                     <ul>
-                        <img id="da2WeathIcon"src="" alt="">
+                        <img id="day2WeathIcon"src="" alt="">
                         <li id="day-2-temp"></li>
                         <li id="day-2-wind"></li>
                         <li id="day-2-humidity"></li>
@@ -79,7 +79,7 @@
                 <div class="col">
                     <h4 id="day-3">Day 3</h4>
                     <ul>
-                        <img id="da3WeathIcon"src="" alt="">
+                        <img id="day3WeathIcon"src="" alt="">
                         <li id="day-3-temp"></li>
                         <li id="day-3-wind"></li>
                         <li id="day-3-humidity"></li>
