--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="container">
 
-    <div class="row justify-content-center">
+    <div id="main-title" class="row justify-content-center">
         <!--Weather Dashboard Title-->
         <h1 id="main-title">Weather Dashboard</h1>
     </div>
@@ -35,7 +35,6 @@
         <div class="col-8">
             <div class="row">
                 <section>
-                    <h2 class="city-title" id="current-city">Current City</h2>
                     <div id="city-weather">
                         <h4 id="day-0"></h4>
                         <ul class="weather-data">
@@ -57,7 +56,7 @@
             <div class="row">
                 <!-- Forecast Day 1 -->
                 <div class="col">
-                    <h4 id="day-1">Day 1</h4>
+                    <h4 id="day-1"></h4>
                     <ul>
                         <img id="day1WeathIcon"src="" alt="">
                         <li id="day-1-temp"></li>
@@ -67,7 +66,7 @@
                 </div>
                 <!-- Forecast Day 2 -->
                 <div class="col">
-                    <h4 id="day-2">Day 2</h4>
+                    <h4 id="day-2"></h4>
                     <ul>
                         <img id="day2WeathIcon"src="" alt="">
                         <li id="day-2-temp"></li>
@@ -77,7 +76,7 @@
                 </div>
                 <!-- Forecast Day 3 -->
                 <div class="col">
-                    <h4 id="day-3">Day 3</h4>
+                    <h4 id="day-3"></h4>
                     <ul>
                         <img id="day3WeathIcon"src="" alt="">
                         <li id="day-3-temp"></li>
@@ -87,7 +86,7 @@
                 </div>
                 <!-- Forecast Day 4 -->
                 <div class="col">
-                    <h4 id="day-4">Day 4</h4>
+                    <h4 id="day-4"></h4>
                     <ul>
                         <img id="day4WeathIcon"src="" alt="">
                         <li id="day-4-temp"></li>
@@ -97,7 +96,7 @@
                 </div>
                 <!-- Forecast Day 5 -->
                 <div class="col">
-                    <h4 id="day-5">Day 5</h4>
+                    <h4 id="day-5"></h4>
                     <ul>
                         <img id="day5WeathIcon"src="" alt="">
                         <li id="day-5-temp"></li>
