finish page styles

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <div id="main-title" class="row justify-content-center">
         <!--Weather Dashboard Title-->
-        <h1 id="main-title">Weather Dashboard</h1>
+        <h1 id="main-title-text">Weather Dashboard</h1>
     </div>
 
     <div class="row">
-        <div class="col-4">
+        <div class="col-3">
             <!--Search for a City-->
             <h2>Search for a City:</h2>
             <form>
@@ -32,8 +32,8 @@
 
         </div>
         <!--Chosen City Display-->
-        <div class="col-8">
-            <div class="row">
+        <div class="col-9">
+            <div id="chosen-city" class="row">
                 <section>
                     <div id="city-weather">
                         <h4 id="day-0"></h4>
@@ -55,53 +55,53 @@
             <!--Forecast Cards-->
             <div class="row">
                 <!-- Forecast Day 1 -->
-                <div class="col">
-                    <h4 id="day-1"></h4>
+                <div class="col-xs-2 day-card">
+                    <h4 class="date-title" id="day-1"></h4>
                     <ul>
-                        <img id="day1WeathIcon"src="" alt="">
-                        <li id="day-1-temp"></li>
-                        <li id="day-1-wind"></li>
-                        <li id="day-1-humidity"></li>
+                        <img class="icon" id="day1WeathIcon"src="" alt="">
+                        <li class="day-data" id="day-1-temp"></li>
+                        <li class="day-data" id="day-1-wind"></li>
+                        <li class="day-data" id="day-1-humidity"></li>
                     </ul>
                 </div>
                 <!-- Forecast Day 2 -->
-                <div class="col">
-                    <h4 id="day-2"></h4>
+                <div class="col-xs-2 day-card">
+                    <h4 class="date-title" id="day-2"></h4>
                     <ul>
-                        <img id="day2WeathIcon"src="" alt="">
-                        <li id="day-2-temp"></li>
-                        <li id="day-2-wind"></li>
-                        <li id="day-2-humidity"></li>
+                        <img class="icon" id="day2WeathIcon"src="" alt="">
+                        <li class="day-data" id="day-2-temp"></li>
+                        <li class="day-data" id="day-2-wind"></li>
+                        <li class="day-data" id="day-2-humidity"></li>
                     </ul>
                 </div>
                 <!-- Forecast Day 3 -->
-                <div class="col">
-                    <h4 id="day-3"></h4>
+                <div class="col-xs-2 day-card">
+                    <h4 class="date-title" id="day-3"></h4>
                     <ul>
-                        <img id="day3WeathIcon"src="" alt="">
-                        <li id="day-3-temp"></li>
-                        <li id="day-3-wind"></li>
-                        <li id="day-3-humidity"></li>
+                        <img class="icon" id="day3WeathIcon"src="" alt="">
+                        <li class="day-data" id="day-3-temp"></li>
+                        <li class="day-data" id="day-3-wind"></li>
+                        <li class="day-data" id="day-3-humidity"></li>
                     </ul>
                 </div>
                 <!-- Forecast Day 4 -->
-                <div class="col">
-                    <h4 id="day-4"></h4>
+                <div class="col-xs-2 day-card">
+                    <h4 class="date-title" id="day-4"></h4>
                     <ul>
-                        <img id="day4WeathIcon"src="" alt="">
-                        <li id="day-4-temp"></li>
-                        <li id="day-4-wind"></li>
-                        <li id="day-4-humidity"></li>
+                        <img class="icon" id="day4WeathIcon"src="" alt="">
+                        <li class="day-data" id="day-4-temp"></li>
+                        <li class="day-data" id="day-4-wind"></li>
+                        <li class="day-data" id="day-4-humidity"></li>
                     </ul>
                 </div>
                 <!-- Forecast Day 5 -->
-                <div class="col">
-                    <h4 id="day-5"></h4>
+                <div class="col-xs-2 day-card">
+                    <h4 class="date-title" id="day-5"></h4>
                     <ul>
-                        <img id="day5WeathIcon"src="" alt="">
-                        <li id="day-5-temp"></li>
-                        <li id="day-5-wind"></li>
-                        <li id="day-5-humidity"></li>
+                        <img class="icon" id="day5WeathIcon"src="" alt="">
+                        <li class="day-data" id="day-5-temp"></li>
+                        <li class="day-data" id="day-5-wind"></li>
+                        <li class="day-data" id="day-5-humidity"></li>
                     </ul>
                 </div>
             </div>
