--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="col-xs-2 day-card">
                     <h4 class="date-title" id="day-1"></h4>
                     <ul>
-                        <img class="icon" id="day1WeathIcon" src="" alt="icon of current weather conditions">
+                        <img class="icon" id="day1WeathIcon" src="" alt="">
                         <li class="day-data" id="day-1-temp"></li>
                         <li class="day-data" id="day-1-wind"></li>
                         <li class="day-data" id="day-1-humidity"></li>
@@ -68,7 +68,7 @@
                 <div class="col-xs-2 day-card">
                     <h4 class="date-title" id="day-2"></h4>
                     <ul>
-                        <img class="icon" id="day2WeathIcon" src="" alt="icon of current weather conditions">
+                        <img class="icon" id="day2WeathIcon" src="" alt="">
                         <li class="day-data" id="day-2-temp"></li>
                         <li class="day-data" id="day-2-wind"></li>
                         <li class="day-data" id="day-2-humidity"></li>
@@ -78,7 +78,7 @@
                 <div class="col-xs-2 day-card">
                     <h4 class="date-title" id="day-3"></h4>
                     <ul>
-                        <img class="icon" id="day3WeathIcon" src="" alt="icon of current weather conditions">
+                        <img class="icon" id="day3WeathIcon" src="" alt="">
                         <li class="day-data" id="day-3-temp"></li>
                         <li class="day-data" id="day-3-wind"></li>
                         <li class="day-data" id="day-3-humidity"></li>
@@ -88,7 +88,7 @@
                 <div class="col-xs-2 day-card">
                     <h4 class="date-title" id="day-4"></h4>
                     <ul>
-                        <img class="icon" id="day4WeathIcon" src="" alt="icon of current weather conditions">
+                        <img class="icon" id="day4WeathIcon" src="" alt="">
                         <li class="day-data" id="day-4-temp"></li>
                         <li class="day-data" id="day-4-wind"></li>
                         <li class="day-data" id="day-4-humidity"></li>
@@ -98,7 +98,7 @@
                 <div class="col-xs-2 day-card">
                     <h4 class="date-title" id="day-5"></h4>
                     <ul>
-                        <img class="icon" id="day5WeathIcon" src="" alt="icon of current weather conditions">
+                        <img class="icon" id="day5WeathIcon" src="" alt="">
                         <li class="day-data" id="day-5-temp"></li>
                         <li class="day-data" id="day-5-wind"></li>
                         <li class="day-data" id="day-5-humidity"></li>
